--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -83,8 +83,11 @@
         <div class="card-body">
           <h5 class="card-title"><%= t('trips.actions') %></h5>
           <div class="d-grid gap-2">
-            <%= link_to t('trips.start_planning'), "#", class: "btn btn-primary", 
-                data: { bs_toggle: "tooltip", bs_title: t('trips.feature_coming_soon') } %>
+            <% if @trip.has_active_chat_session? %>
+              <%= link_to t('trips.continue_chat'), trip_chat_session_path(@trip, @trip.active_chat_session), class: "btn btn-primary" %>
+            <% else %>
+              <%= link_to t('trips.start_planning'), trip_chat_sessions_path(@trip), data: { turbo_method: :post }, class: "btn btn-primary" %>
+            <% end %>
             <%= link_to t('trips.view_map'), "#", class: "btn btn-outline-secondary", 
                 data: { bs_toggle: "tooltip", bs_title: t('trips.feature_coming_soon') } %>
             <%= link_to t('trips.export_pdf'), "#", class: "btn btn-outline-info", 
