--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -56,8 +56,8 @@
             </div>
 
             <div class="mb-3 form-check">
-              <%= form.check_box :is_public, class: "form-check-input" %>
-              <%= form.label :is_public, t('trips.make_public'), class: "form-check-label" %>
+              <%= form.check_box :public_trip, class: "form-check-input" %>
+              <%= form.label :public_trip, t('trips.make_public'), class: "form-check-label" %>
               <small class="form-text text-muted d-block"><%= t('trips.public_description') %></small>
             </div>
 
