--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -55,8 +55,8 @@
 
             <div class="col-md-6 mb-3">
               <h6 class="text-muted"><%= t('trips.visibility') %></h6>
-              <span class="badge bg-<%= @trip.is_public ? 'info' : 'secondary' %> fs-6">
-                <%= @trip.is_public ? t('trips.public') : t('trips.private') %>
+              <span class="badge bg-<%= @trip.public_trip? ? 'info' : 'secondary' %> fs-6">
+                <%= @trip.public_trip? ? t('trips.public') : t('trips.private') %>
               </span>
             </div>
           </div>
