--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -3,7 +3,7 @@
     <div class="col-12">
       <div class="d-flex justify-content-between align-items-center mb-4">
         <h1><%= t('trips.my_trips') %></h1>
-        <%= link_to t('trips.new_trip'), new_trip_path, class: "btn btn-primary" %>
+        <%= button_to t('trips.new_trip'), trips_path, method: :post, class: "btn btn-primary" %>
       </div>
 
       <% if @trips.any? %>
@@ -46,7 +46,7 @@
           <i class="bi bi-map display-1 text-muted"></i>
           <h3 class="text-muted mt-3"><%= t('trips.no_trips') %></h3>
           <p class="text-muted"><%= t('trips.no_trips_description') %></p>
-          <%= link_to t('trips.create_first_trip'), new_trip_path, class: "btn btn-primary btn-lg" %>
+          <%= button_to t('trips.create_first_trip'), trips_path, method: :post, class: "btn btn-primary btn-lg" %>
         </div>
       <% end %>
     </div>
