--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,6 +69,7 @@
               <ul class="dropdown-menu">
                 <li><%= link_to "English", url_for(locale: :en), class: "dropdown-item" %></li>
                 <li><%= link_to "Español", url_for(locale: :es), class: "dropdown-item" %></li>
+                <li><%= link_to "Português", url_for(locale: :pt), class: "dropdown-item" %></li>
               </ul>
             </li>
           </ul>
